// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchLabeled [common] example testing should match snapshot(s) for interactive-default 1`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      Airplane Mode
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Airplane Mode
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for interactive-default 2`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      Bluetooth
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Bluetooth
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for interactive-default 3`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      Cellular Data
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Cellular Data
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for interactive-with-changing-labels 1`] = `
<label
  className="lucid-SwitchLabeled lucid-SwitchLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={true}
    onSelect={[Function]}
  />
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Airplane Mode Activated
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for interactive-with-changing-labels 2`] = `
<label
  className="lucid-SwitchLabeled lucid-SwitchLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={true}
    onSelect={[Function]}
  />
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Bluetooth Enabled
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for interactive-with-changing-labels 3`] = `
<label
  className="lucid-SwitchLabeled lucid-SwitchLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={true}
    onSelect={[Function]}
  />
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Use Cellular Data
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for interactive-with-changing-labels 4`] = `
<label
  className="lucid-SwitchLabeled lucid-SwitchLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={true}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      Yes! I would like to receive updates, special offers, and other information from AppNexus and its subsidiaries.
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Yes! I would like to receive updates, special offers, and other information from AppNexus and its subsidiaries.
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for label-as-prop 1`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Just text
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for label-as-prop 2`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      <span>
        HTML element
      </span>
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for label-as-prop 3`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Text in an array
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for label-as-prop 4`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      <span>
        HTML element in an array
      </span>
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for states 1`] = `
<label
  className="lucid-SwitchLabeled"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      (default props)
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      (default props)
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for states 2`] = `
<label
  className="lucid-SwitchLabeled lucid-SwitchLabeled-is-disabled"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Switch
    isDisabled={true}
    isSelected={false}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      Disabled
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Disabled
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for states 3`] = `
<label
  className="lucid-SwitchLabeled lucid-SwitchLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Switch
    isDisabled={false}
    isSelected={true}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      Selected
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Selected
    </span>
  </CSSTransitionGroup>
</label>
`;

exports[`SwitchLabeled [common] example testing should match snapshot(s) for states 4`] = `
<label
  className="lucid-SwitchLabeled lucid-SwitchLabeled-is-disabled lucid-SwitchLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Switch
    isDisabled={true}
    isSelected={true}
    onSelect={[Function]}
  >
    <SwitchLabeled.Label>
      Disabled & selected
    </SwitchLabeled.Label>
  </Switch>
  <CSSTransitionGroup
    className="lucid-SwitchLabeled-text"
    style={
      Object {
        "position": "relative",
      }
    }
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={100}
    transitionLeave={true}
    transitionLeaveTimeout={100}
    transitionName="lucid-SwitchLabeled-text"
  >
    <span
      key="0"
    >
      Disabled & selected
    </span>
  </CSSTransitionGroup>
</label>
`;
